Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17974

sanity-quota test_3b: (qmt_lock.c:957:qmt_id_lock_notify()) ASSERTION( lqe->lqe_is_global )

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0, Lustre 2.15.6
    • Lustre 2.15.5
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Minh Diep <mdiep@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/e6debda9-ee5f-4175-96f4-71fe2078af95

      test_3b failed with the following error:

      onyx-124vm6 crashed during sanity-quota test_3b
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-b2_15/92 - 4.18.0-477.27.1.el8_8.x86_64
      servers: https://build.whamcloud.com/job/lustre-b2_15/92 - 4.18.0-477.27.1.el8_lustre.x86_64

      <<Please provide additional information about the failure here>>

      [29347.756593] LustreError: 1786057:0:(qmt_lock.c:957:qmt_id_lock_notify()) ASSERTION( lqe->lqe_is_global ) failed:
      [29347.758422] LustreError: 1786057:0:(qmt_lock.c:957:qmt_id_lock_notify()) LBUG
      [29347.759616] Pid: 1786057, comm: qsd_reint_qpool 4.18.0-477.27.1.el8_lustre.x86_64 #1 SMP Thu Jun 20 04:13:41 UTC 2024
      [29347.761346] Call Trace TBD:
      [29347.761975] [<0>] libcfs_call_trace+0x6f/0xa0 [libcfs]
      [29347.762930] [<0>] lbug_with_loc+0x3f/0x70 [libcfs]
      [29347.763764] [<0>] qmt_id_lock_notify+0x1ee/0x330 [lquota]
      [29347.764777] [<0>] qmt_site_recalc_cb+0x34b/0x550 [lquota]
      [29347.765708] [<0>] cfs_hash_for_each_tight+0x122/0x310 [libcfs]
      [29347.766709] [<0>] qmt_pool_recalc+0x375/0xa80 [lquota]
      [29347.767603] [<0>] kthread+0x134/0x150
      [29347.768319] [<0>] ret_from_fork+0x35/0x40
      [29347.769063] Kernel panic - not syncing: LBUG
      [29347.769804] CPU: 0 PID: 1786057 Comm: qsd_reint_qpool Kdump: loaded Tainted: P OE --------- - - 4.18.0-477.27.1.el8_lustre.x86_64 #1
      [29347.771895] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [29347.772859] Call Trace:
      [29347.773335] dump_stack+0x41/0x60
      [29347.773932] panic+0xe7/0x2ac
      [29347.774485] ? ret_from_fork+0x35/0x40
      [29347.775141] lbug_with_loc.cold.8+0x18/0x18 [libcfs]
      [29347.776002] qmt_id_lock_notify+0x1ee/0x330 [lquota]
      [29347.776858] qmt_site_recalc_cb+0x34b/0x550 [lquota]
      [29347.777706] ? qmt_pool_lqes_lookup_spec+0x340/0x340 [lquota]
      [29347.778678] cfs_hash_for_each_tight+0x122/0x310 [libcfs]
      [29347.779588] qmt_pool_recalc+0x375/0xa80 [lquota]
      [29347.780402] ? __schedule+0x2d9/0x870
      [29347.781050] ? qmt_sarr_get_idx+0x90/0x90 [lquota]
      [29347.781873] ? qmt_sarr_get_idx+0x90/0x90 [lquota]
      [29347.782697] kthread+0x134/0x150
      [29347.783271] ? set_kthread_struct+0x50/0x50
      [29347.783991] ret_from_fork+0x35/0x40

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-quota test_3b - onyx-124vm6 crashed during sanity-quota test_3b

            scherementsev Sergey Cheremencev
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: